# headroom

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.vscode-plugin  README.md  docker-compose.copilot.yml  docker-compose.yml  index.html  pyproject.toml  release-notes.md  sitemap.xml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  devcontainers.yml  docker.yml  docs.yml  eval.yml  init-e2e.yml  init-native-e2e.yml  install-native-e2e.yml  merge-conflicts.yml  network-diff-capture.yml  opencode-plugin.yml  pr-health.yml  publish.yml  release-please.yml  release.yml  rust.yml  security.yml  wrap-e2e.yml  wrap-native-e2e.yml
ARCHITECTURE/: index.html
LIMITATIONS/: index.html
agno/: index.html
api/: index.html
benchmarks/: index.html
ccr/: index.html
cli/: index.html
configuration/: index.html
crates/headroom-core/: Cargo.toml
crates/headroom-core/src/: lib.rs  onnx_cpu.rs
crates/headroom-core/src/relevance/: embedding.rs
crates/headroom-core/src/transforms/: adaptive_sizer.rs  magika_detector.rs  recommendations.rs  search_compressor.rs
docker/: docker-compose.native.yml
docs/: claude-code-bedrock-headroom.md  package-lock.json  package.json  platform-feature-matrix.json  platform-stabilization.md
docs/content/docs/: agent-orchestration.mdx  architecture.mdx  benchmarks.mdx  cache-optimization.mdx  configuration.mdx  docker-install.mdx  how-compression-works.mdx  installation.mdx  local-llm-prefill.mdx  meta.json  opencode.mdx  pipeline-extensions.mdx  proxy.mdx
e2e/wrap/: run.py
getting-started/: index.html
headroom/: _ort.py  _version.py  agent_savings.py  config.py  copilot_auth.py
headroom/backends/: litellm.py
headroom/cache/: prefix_tracker.py
headroom/ccr/: mcp_server.py  response_handler.py  tool_injection.py
headroom/cli/: doctor.py  install.py  mcp.py  proxy.py  toin_publish.py  wrap.py
headroom/compression/handlers/: code_handler.py
headroom/dashboard/templates/: dashboard.html
headroom/evals/memory/: judge.py
headroom/install/: planner.py  state.py  supervisors.py
headroom/integrations/: litellm_callback.py
headroom/learn/: analyzer.py  verbosity.py
headroom/learn/plugins/: claude.py
headroom/mcp_registry/: claude.py
headroom/memory/: storage_router.py
headroom/observability/: metrics.py
headroom/providers/: anthropic.py  proxy_routes.py  registry.py
headroom/proxy/: cost.py  helpers.py  models.py  outcome.py  output_savings.py  output_shaper.py  prometheus_metrics.py  savings_tracker.py  server.py  turn_hooks.py
headroom/rtk/: installer.py
headroom/subscription/: tracker.py
headroom/tokenizers/: huggingface.py  registry.py
headroom/transforms/: adaptive_sizer.py  code_compressor.py  content_detector.py  content_router.py  cross_turn_dedup.py  diff_compressor.py  lossless_compaction.py  read_lifecycle.py  search_compressor.py  smart_crusher.py  tabular_ingest.py
learn/: index.html
macos-deployment/: index.html
metrics/: index.html
plugin/: README.md  vscode-settings.json
plugins/openclaw/: package-lock.json  package.json
plugins/opencode/: package-lock.json  package.json
proxy/: index.html
quickstart/: index.html
scripts/: version-sync.py
scripts/tests/: test_pr_health_workflow.py  test_version_sync.py
sdk/typescript/: package-lock.json  package.json
search/: search_index.json
strands/: index.html
tests/: test_5xx_accounting_all_providers.py  test_adaptive_sizer.py  test_agent_savings.py  test_anthropic_ccr_workspace_unbound.py  test_backend_nonstreaming_cache_metrics.py  test_bash_search_lossless_fold.py  test_bedrock_region.py  test_cache_control_move_bust.py  test_cache_mode_delta_marker.py  test_cache_prefix_overlay.py  test_ccr_mcp_server.py  test_ccr_response_handler_extra.py  test_ccr_response_handler_openai_responses.py  test_cli_doctor.py  test_cli_proxy_env.py  test_cli_proxy_improvements.py  test_code_aware_brace_comment_regressions.py  test_code_aware_regressions.py  test_codex_responses_passthrough_bytes.py  test_codex_ws_compression_scheduler.py  test_content_router_user_blocks.py  test_copilot_auth.py  test_cost_tracker_counterfactual.py  test_cross_turn_cache_safety.py  test_cross_turn_dedup.py  test_custom_base_passthrough_telemetry.py  test_dashboard_cache_lifetime_playwright.py  test_dashboard_cache_ttl_playwright.py  test_dashboard_context_tool_availability_playwright.py  test_docker_compose_persistence.py  test_h2_stream_reset_retry.py  test_huggingface_tokenizer_timeout.py  test_issue_746_tool_search.py  test_litellm_callback.py  test_litellm_nonstream_cache_usage.py  test_lossless_excluded_compaction.py  test_lossless_first_dispatch.py  test_lossless_mode.py  test_lossless_then_lossy.py  test_memory_eval.py  (+62 more)
tests/test_cache/: test_prefix_tracker.py
tests/test_cli/: test_install_cli.py  test_main_help_version.py  test_mcp.py  test_unwrap_claude.py  test_wrap_bridge.py  test_wrap_claude_base_url.py  test_wrap_claude_vertex_proxy_env.py  test_wrap_codex.py  test_wrap_copilot.py  test_wrap_helpers.py  test_wrap_opencode.py  test_wrap_persistent.py  test_wrap_rtk_on_path.py  test_wrap_stale_marker.py
tests/test_compression/: test_code_handler.py
tests/test_install/: test_planner.py  test_runtime.py  test_state.py  test_supervisors.py
tests/test_learn/: test_analyzer.py  test_scanner.py
tests/test_mcp_registry/: test_claude_registrar.py
tests/test_providers/: test_anthropic.py
tests/test_proxy/: test_anthropic_ccr_deferred_injection.py  test_anthropic_upstream_header.py  test_openai_chat_savings_profile.py  test_openai_responses_ccr.py  test_openai_transport_path_prefix.py
tests/test_transforms/: test_code_compressor.py  test_code_compressor_cjk.py  test_content_router.py  test_diff_compressor.py  test_ort_dylib.py  test_smart_crusher_audit_safe.py
tools/copilot-test/: ENTERPRISE-COPILOT-TEST.md  copilot_doctor.py  enterprise_proxy_test.py
transforms/: index.html
troubleshooting/: index.html
typescript-sdk/: index.html
vertex/: index.html
wiki/: cli.md  configuration.md  proxy.md
(+12 files in other folders)
